feat: 添加获取角色详情接口；修改jwt配置
