# swagger/swagger.json
@@ -5,6 +5,26 @@
     },
     "paths": {
         "/v1/role": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "角色服务"
+                ],
+                "summary": "角色分页列表",
+                "parameters": [
+                    {
+                        "description": "角色列表搜索参数",
+                        "name": "entity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RoleQueryReq"
+                        }
+                    }
+                ]
+            },
             "put": {
                 "produces": [
                     "application/json"
@@ -42,6 +62,26 @@
                         "schema": {
                             "$ref": "#/definitions/model.CreateRoleReq"
                         }
+                    }
+                ]
+            }
+        },
+        "/v1/role/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "角色服务"
+                ],
+                "summary": "角色详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "角色id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ]
             }
@@ -105,6 +145,19 @@
                 "roleName": {
                     "description": "角色名称",
                     "type": "string"
+                }
+            }
+        },
+        "model.RoleQueryReq": {
+            "type": "object",
+            "properties": {
+                "pageNum": {
+                    "description": "分页页数",
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "description": "分页大小",
+                    "type": "integer"
                 }
             }
         },
